--- a/tata-bank-core/build.gradle
+++ b/tata-bank-core/build.gradle
@@ -8,5 +8,6 @@ dependencies {
     implementation 'org.springframework.data:spring-data-jpa'
     implementation 'javax.persistence:javax.persistence-api'
     implementation 'com.querydsl:querydsl-jpa'
+    implementation 'com.querydsl:querydsl-sql:5.0.0'
     implementation 'org.postgresql:postgresql'
 }
