--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -29,5 +29,21 @@ dependencyManagement {
 
         // Documentation
         dependency("org.springdoc:springdoc-openapi-ui:${springdocOpenapiUiVersion}")
+
+        dependency("org.keycloak:keycloak-spring-boot-starter:${springBootKeycloakVersion}")
+        dependency "org.keycloak:keycloak-admin-client:${keycloackAdminClientVersion}"
+        dependency("io.jsonwebtoken:jjwt:${jsonwebtokenVersion}")
+
+        dependency("org.hibernate:hibernate-core:${hibernateVersion}")
+        dependency("org.hibernate:hibernate-entitymanager:${hibernateVersion}")
+
+        dependencySet(group: 'com.fasterxml.jackson.core', version: "${jacksonVersion}") {
+            entry 'jackson-databind'
+            entry 'jackson-core'
+            entry 'jackson-annotations'
+        }
+
+        dependency("org.springframework.security:spring-security-core:${securityCore}")
+        dependency("org.apache.commons:commons-lang3:${apacheCommonsLangVersion}")
     }
 }
