--- a/fkp-base-services/src/main/resources/application.yaml
+++ b/fkp-base-services/src/main/resources/application.yaml
@@ -13,9 +13,9 @@ server:
 keycloak:
   enabled: true
   bearer-only: true
-  auth-server-url: http://localhost:8080/auth
+  auth-server-url: http://localhost:8080
   resource: base-ws-server
-  realm: base-technical-test
+  realm: base-technicla-test
   public-client: true
   principal-attribute: preferred_username
   # credentials:
