--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include 'tata-person-core'
 include 'tata-bank-client'
 include 'tata-bank-core'
 include 'fkp-base-services'
+include 'fkp-tata-entity'
 
